--- a/proceeding/GROVER_ONDREJ.tex
+++ b/proceeding/GROVER_ONDREJ.tex
@@ -1,15 +1,48 @@
 \documentclass[twoside]{articlek}
-\title{Electron density measurement via microwave interferometer}
-\author{Ond Grover}
-\usepackage[czech]{babel}
+\newcommand{\mins}{&\!\!\!\!}
+\renewcommand{\refname}{REFERENCES}
+\textwidth=17.3truecm \hoffset=0.55truecm \textheight=26.4truecm
+\topmargin=-2.2truecm \columnsep=0.7truecm \oddsidemargin =
+-.4truecm \evensidemargin = -1.7truecm \pagenumbering{arabic}
+\pagestyle{headings} \setcounter{page}{0}
+\newlength{\sectionName}
+\newlength{\sectionNameP}
+\unitlength=1cm
+\frenchspacing
+%\parindent=0cm
+\def\be{\begin{equation}}
+\def\ee{\end{equation}}
+% ------------------------------------------------------------------------
+
+\def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
+            T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
+
+\usepackage{graphicx}
+% ------------------------------------------------------------------------
 \begin{document}
-\maketitle{}
+\sloppy
+\twocolumn[{
+%\vspace*{1.7cm}   % for the title  page only
+%\begin{center}
+{\large\bf Density measurement via microwave interferometry at the GOLEM Tokamak}\\
+
+{\small %A. Author, e-mail, B. Author, e-mail, address and C.
+O. Grover, ondrej.grover@gmail.com, FJFI CVUT}\\ %TODO what address and other authors included ?
+
+%\end{center}
+%\vspace*{1ex}
+
+%{\bf ABSTRACT.} These are the guidelines for preparation of
+%manuscripts of the contributions to the proceedings of the 17th
+%Conference of Czech and Slovak Physicists, held on September 5 -
+%8, 2011.\\
+}]
 \section{INTRODUCTION}
 Electron density is on of the key parameters in the field of plasma physics. Its measurement gives us important information about the behaviour and characteristics of plasma. For that purpose many different methods of density measurement exist.% yoda
 The most widespread are microwave diagnostics, mainly because of their non-invasive nature. 
 
 The microwave interferometer which has been recently installed at the GOLEM Tokamak measures the line-averaged electron density and can be used to track the time evolution during a discharge.%time evolution\ldots term?
-This diagnostic had been previously implemented on the same device where it was in service as \uv{CASTOR} %reformulate 
+This diagnostic had been previously implemented on the same device where it was in service as CASTOR %reformulate 
 at the Czech Academy of Sciences and the whole waveguide system and other analytical hardware was made with the parameters of the site and work-flow in mind. This paper presents the current state of implementation at the GOLEM Tokamak.
 
 \section{Physical principles of operation} % find something better and CAPS
@@ -17,7 +50,7 @@ at the Czech Academy of Sciences and the whole waveguide system and other analyt
 A microwave passing through plasma undergoes a phase shift change, because the refractive index of plasma is bellow 1. %or is it not ? REFORMULATE
 This phase shift is directly proportional to the electron density as can be seen in the following equation:
 \begin{equation}
-    n_e=\frac{/varphi /lambda n_{crit}}{d}
+    n_e=\frac{\varphi \lambda n_{crit}}{d}
     \label{eq:ne}
 \end{equation}
 where $\lambda$ is the wavelength of the microwave, $d$ is the distance that the microwave beam travels through plasma and $n_{crit}$ is the critical electron density at which the microwave beam cannot pass through plasma and is reflected.
