physical premisses extended, nearly done

--- a/proceeding/GROVER_ONDREJ.tex
+++ b/proceeding/GROVER_ONDREJ.tex
@@ -49,13 +49,16 @@ at the Czech Academy of Sciences and the whole waveguide system and other analyt
 
 In ionized plasma oscillations of electrons around ions arise when the homogeneity of the electrostatic charge is disrupted. The angular frequency of such plasma oscillations $\omega_p$ is dependant on the electron density $n_e$. 
 
-As shown in \cite{mateju}, an electromagnetic wave propagating through plasma perpendicularly to the magnetic and electric field \footnote{a so called ``ordinary wave'', the geometry of a conventional Tokamak allows for such fields to exist} has a dispersion relation
+As shown in \cite{mateju}, an electromagnetic wave propagating through plasma perpendicularly to the magnetic and electric field\footnote{a so called ``ordinary wave'', the geometry of a conventional Tokamak allows for such fields to exist} has a dispersion relation
 \begin{equation}
     \omega = \omega_p +c^2 k^2
     \label{eq:dispersion}
 \end{equation}
 where $\omega$ is the angular frequency of the propagating EM wave, $k$ is its wavenumber and $c$ is the speed of light in vacuum.
 
+Therefore an EM wave at a given $\omega>\omega_p$ has a real wavenumber $k$ and it propagates with a phase velocity $v_p>c$. Hence the refractive index $n$ is less than 1 and is dependent on $\omega_p$, thus also dependent on the electron density $n_e$. 
+
+As $\omega$ approaches $\omega_p$, the refractive index $n$ approaches 0 so the EM wave cannot propagate and is reflected. Thus for probing beam with a given $\omega$ there is a so called critical density $n_{crit}$ above which the measurement cannot take place.
 
 A microwave passing through plasma undergoes a phase shift change, because the refractive index of plasma is bellow 1. %or is it not ? REFORMULATE
 This phase shift is directly proportional to the electron density as can be seen in the following equation:
