--- a/proceeding/GROVER_ONDREJ.tex
+++ b/proceeding/GROVER_ONDREJ.tex
@@ -45,7 +45,7 @@ The microwave interferometer which has been recently installed at the GOLEM Toka
 This diagnostic had been previously implemented on the same device when it was in service as the CASTOR Tokamak %reformulate 
 at the Czech Academy of Sciences and the whole waveguide system and other analytical hardware were made with the specific parameters of the site and work-flow in mind. This paper presents the current state of implementation at the GOLEM Tokamak.
 
-\section{Physical principles of operation} % find something better and CAPS
+\section{FUNDAMENTAL PRINCIPLES OF OPERATION} % find something better and CAPS
 
 In ionized plasma oscillations of electrons around ions arise when the homogeneity of the electrostatic charge is disrupted. The angular frequency of such plasma oscillations $\omega_p$ is dependant on the electron density $n_e$. 
 
@@ -60,13 +60,14 @@ Therefore an EM wave at a given $\omega>\omega_p$ has a real wavenumber $k$ and 
 
 As $\omega$ approaches $\omega_p$, the refractive index $n$ approaches 0 so the EM wave cannot propagate and is reflected. Thus for probing beam with a given $\omega$ there is a so called critical density $n_{crit}$ above which the measurement cannot take place.
 
-A microwave passing through plasma undergoes a phase shift change, because the refractive index of plasma is bellow 1. %or is it not ? REFORMULATE
-This phase shift is directly proportional to the electron density as can be seen in the following equation:
+
+A microwave beam probing the plasma undergoes a phase shift $\Delta \varphi$ due to the different $n$.  %or is it not ? REFORMULATE
+As $n_e$ and therefore also $n$ differs throughout the plasma, the total phase shift is directly proportional to the line integral of $n_e$ over the distance $d$ traveled through plasma as has been derived in \cite{mateju}
 \begin{equation}
-    n_e=\frac{\varphi \lambda n_{crit}}{d}
+    \overline{n_e}=\frac{ n_{crit}\lambda_0 }{d \pi}\Delta \varphi
     \label{eq:ne}
 \end{equation}
-where $\lambda$ is the wavelength of the microwave, $d$ is the distance that the microwave beam travels through plasma and $n_{crit}$ is the critical electron density at which the microwave beam cannot pass through plasma and is reflected.
+where $\lambda_0$ is the wavelength of the microwave in vacuum and $d$ is the distance that the microwave beam travels through plasma. 
 %------------------------------------
 \begin{thebibliography}{99}
 
