added poster.tex and one change in proceeding

--- a/proceeding/GROVER_ONDREJ.tex
+++ b/proceeding/GROVER_ONDREJ.tex
@@ -56,7 +56,7 @@ As shown in \cite{mateju}, an electromagnetic wave propagating through plasma pe
 \end{equation}
 where $\omega$ is the angular frequency of the propagating EM wave, $k$ is its wavenumber and $c$ is the speed of light in vacuum.
 
-Therefore an EM wave at a given $\omega>\omega_p$ has a real wavenumber $k$ and it propagates with a phase velocity $v_p>c$. Hence the refractive index $n$ is less than 1 and is dependent on $\omega_p$, thus also dependent on the electron density $n_e$. 
+Therefore an EM wave with a given angular frequency $\omega>\omega_p$ has a real wavenumber $k$ and it propagates with a phase velocity $v_p>c$. Hence the refractive index $n$ is less than 1 and is dependent on $\omega_p$, thus also dependent on the electron density $n_e$. 
 
 As $\omega$ approaches $\omega_p$, the refractive index $n$ approaches 0 so the EM wave cannot propagate and is reflected. Thus for probing beam with a given $\omega$ there is a so called critical density $n_{crit}$ above which the measurement cannot take place.
 
