info about params in formula

--- a/poster/poster-svoboda/poster.tex
+++ b/poster/poster-svoboda/poster.tex
@@ -235,6 +235,12 @@ The goals of this project were to implement the standard line-averaged electron 
  {
  %info+schema
 The refractive index of plasma $n$ is dependent on the electron density $n_e$. Therefore, a microwave beam with $f \sim 75$ GHz probing the plasma undergoes a phase shift $\Delta \varphi$ which is directly proportional to $n_e$
+%vzorec
+\begin{itemize}
+    \item $d$ \dots distance the beam travels through plasma, assumed to be the diameter of the limiter ring inside the chamber
+    \item $\lambda_0$ \dots wavelength of the microwave in vakuum
+    \item $n_{crit}$ \dots critical density 
+\end{itemize}<++>
  }
  \headerbox{Frequency Modulation}{name=modulation}
  {
