condensed intro, they can ask questions if they want

--- a/poster/poster-svoboda/poster.tex
+++ b/poster/poster-svoboda/poster.tex
@@ -221,9 +221,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \headerbox{Introduction}{name=intro,column=0,row=0}
 {
-Electron density measurement is one of the standard diagnostics in the field of plasma physics. Since 2007 when the device back then named CASTOR was transfered to the Faculty of Nuclear Physics and Engineering from the Czech Academy of Sciences, several original and also new diagnostics have been implemented. 
+Electron density measurement is one of the standard diagnostics in the field of plasma physics. 
 
-The goals of this project were to implement the standard line-averaged electron density measurement via microwave interferometry. This consisted of several steps
+The goals of this project were to adapt the old CASTOR implementation of the standard line-averaged electron density measurement via microwave interferometry to the new environment of the GOLEM Tokamak. This consisted of several steps
 \begin{itemize}
     \item Building the waveguide system
     \item Calibrating the diagnostic hardware 
@@ -265,7 +265,7 @@ The total length of the new waveguide system is nearly 10 m, which was achieved 
  %nromal black boxes, and sine wave signal analysis
  }
 
- \headerbox{Signal Disturbances}{name=disturb,column=0,row=2,span=2,below=data}
+ \headerbox{Signal Disturbances}{name=disturb,column=1,row=2,span=2,below=data}
  {
  %what why
  }<++>
