added colors to for microwave scheme and optimized layout

--- a/poster/poster-svoboda/poster.tex
+++ b/poster/poster-svoboda/poster.tex
@@ -234,14 +234,14 @@ The goals of this project were to adapt the old CASTOR implementation of the sta
  \headerbox{Microwave Interferometry}{name=interf,column=1,span=2}
  {
  %info+schema
-The refractive index of plasma $n$ is dependent on the electron density $n_e$. Therefore, a microwave beam with $f \sim 75$ GHz probing the plasma undergoes a phase shift $\Delta \varphi$ which is directly proportional to $n_e$
+ The refractive index of \textcolor{purple}{plasma} $n$ is dependent on the electron density $n_e$. Therefore, a microwave beam with $f \sim 75$ GHz \textcolor{green}{probing the plasma} undergoes a phase shift $\Delta \varphi$ which is directly proportional to $n_e$
 %vzorec
 \begin{itemize}
     \item $d$ \dots distance the beam travels through plasma, assumed to be the diameter of the limiter ring inside the chamber
     \item $\lambda_0$ \dots wavelength of the microwave in vacuum
     \item $n_{crit}$ \dots critical density 
 \end{itemize}
-$\Delta \varphi$ is extracted from the interference of the reference and the probing beam, from which the reference beam was split off, thus the ref. beam has the same phase as the probing beam had before entering the plasma.
+$\Delta \varphi$ is extracted from the \textcolor{cyan}{interference} of the \textcolor{orange}{reference beam} and the \textcolor{green}{probing beam}, from which the reference beam was split off, thus the \textcolor{orange}{ref. beam} has the same phase as the \textcolor{green}{probing beam} had before entering the \textcolor{purple}{plasma}.
 %schema
  }
          \headerbox{Frequency Modulation}{name=modulation,column=0,below=intro}
@@ -265,7 +265,7 @@ The total length of the new waveguide system is nearly 10 m, which was achieved 
  %nromal black boxes, and sine wave signal analysis
  }
 
- \headerbox{Signal Disturbances}{name=disturb,column=1,row=2,span=2,below=data}
+ \headerbox{Signal Disturbances}{name=disturb,column=0,row=2,span=2,below=data}
  {
  %what why
  }<++>
