finalized the microwave box

--- a/poster/poster-svoboda/poster.tex
+++ b/poster/poster-svoboda/poster.tex
@@ -242,11 +242,12 @@ $\Delta \varphi$ is extracted from the \textcolor{cyan}{interference} of the \te
     \overline{n_e}=\frac{ n_{crit}\lambda_0 }{d \pi}\Delta \varphi
     \label{eq:ne}
 \end{equation}
-$\overline{n_e}$ is the electron density line-averaged over the distance $d$ that the MW with a wavelength in vacuum $\lambda_0$ travels through plasma
+\begin{itemize}
+    \item $\overline{n_e}$ is the electron density line-averaged over the distance $d$ that the MW with a wavelength in vacuum $\lambda_0$ travels through plasma
 
 
 %needs smth about n_crit
-$n_{crit}$ is the critical density above which the MW cannot propagate through plasma. $f \sim 75 \text{GHz} \dots n_{crit} \sim 6.9 \dot 10^{19} \text{cm}^{-3}$
+\item $n_{crit}$ is the critical density above which the MW cannot propagate through plasma\\ $f \sim 75 \text{GHz} \ldots n_{crit} \sim 6,9 \cdot 10^{19} \text{cm}^{-3}$
 \end{itemize}
 \end{multicols}
  }
