commented out acknowledgement

--- a/poster/poster-svoboda/poster.tex
+++ b/poster/poster-svoboda/poster.tex
@@ -301,13 +301,13 @@ The amplified signal is digitized with a sampling frequency of 25 MHz and then p
   \ei
 }
 
-\headerbox{Acknowledgment}{name=acknowledgment,column=2,row=1, span=1,below=conclusion}
-{
-  The financial support by MSM 6840770039,  MSM 6840770014 and A1581 is acknowledged.
-  \vspace{0.5em}
-}
+%\headerbox{Acknowledgment}{name=acknowledgment,column=2,row=1, span=1,below=conclusion}
+%{
+%  The financial support by MSM 6840770039,  MSM 6840770014 and A1581 is acknowledged.
+%  \vspace{0.5em}
+%}
 
-\headerbox{References}{name=References,column=2,row=1, span=1,below=acknowledgment}
+\headerbox{References}{name=References,column=2,row=1, span=1,below=conclusion}
 {
   \nocite{FusenEngDes11}
   \nocite{Zara06}
