commented out Conclusion as most of it would be in Signal Disturb anyhow

--- a/poster/poster-svoboda/poster.tex
+++ b/poster/poster-svoboda/poster.tex
@@ -286,20 +286,20 @@ The amplified signal is digitized with a sampling frequency of 25 MHz and then p
  {
  %what why
  }<++>
-\headerbox{Future Plans}{name=plans,column=2,row=3,below=waveguides}
+\headerbox{Future Plans}{name=plans,column=2,row=3,below=modulation}
 {
 \begin{itemize}
     \item Use a different and well grounded saw-tooth voltage and trigger generator to overcome possible coupling with the chamber.
     \item Study the influence of plasma stability once the Mirnov coils feedback-based plasma position stabilization system is operational.
 \end{itemize}
 }
-\headerbox{Conclusion}{name=conclusion,column=2,row=4,below=plans}
-{
-  \bi
-    \im The present status of the GOLEM tokamak from the engineering as well as plasma performance point of view is presented.
-    \im The research and educational opportunities are offered to the fusion community.
-  \ei
-}
+%\headerbox{Conclusion}{name=conclusion,column=2,row=4,below=plans}
+%{
+%  \bi
+%    \im The present status of the GOLEM tokamak from the engineering as well as plasma performance point of view is presented.
+%    \im The research and educational opportunities are offered to the fusion community.
+%  \ei
+%}
 
 %\headerbox{Acknowledgment}{name=acknowledgment,column=2,row=1, span=1,below=conclusion}
 %{
@@ -307,7 +307,7 @@ The amplified signal is digitized with a sampling frequency of 25 MHz and then p
 %  \vspace{0.5em}
 %}
 
-\headerbox{References}{name=References,column=2,row=1, span=1,below=conclusion}
+\headerbox{References}{name=References,column=2,row=1, span=1,below=plans}
 {
   \nocite{FusenEngDes11}
   \nocite{Zara06}
