added some compresslist

--- a/poster/poster-svoboda/poster.tex
+++ b/poster/poster-svoboda/poster.tex
@@ -225,6 +225,7 @@ Electron density measurement is one of the standard diagnostics in the field of 
 
 The goal of this project was to adapt the old CASTOR implementation of the standard line-averaged electron density measurement via microwave interferometry to the new environment of the GOLEM Tokamak. This consisted of several steps
 \begin{itemize}
+        \compresslist
     \item Building the waveguide system
     \item Calibrating the diagnostic hardware 
     \item Developing a set of analytical and control scripts
@@ -244,6 +245,7 @@ $\Delta \varphi$ is extracted from the \textcolor{cyan}{interference} of the \te
     \label{eq:ne}
 \end{equation}
 \begin{itemize}
+        \compresslist
     \item $\overline{n_e}$ is the electron density line-averaged over the distance $d$ that the MW with a wavelength in vacuum $\lambda_0$ travels through plasma
 
 
@@ -290,6 +292,7 @@ The amplified signal is digitized with a sampling frequency of 25 MHz and then p
 \headerbox{Future Plans}{name=plans,column=2,row=3,below=modulation}
 {
 \begin{itemize}
+        \compresslist
     \item Use a different and well grounded saw-tooth voltage and trigger generator to overcome possible coupling with the chamber.
     \item Study the influence of plasma stability once the Mirnov coils feedback-based plasma position stabilization system is operational.
 \end{itemize}
