condensed waveguide system

--- a/poster/poster-svoboda/poster.tex
+++ b/poster/poster-svoboda/poster.tex
@@ -268,7 +268,8 @@ $\Delta \varphi$ is extracted from the \textcolor{cyan}{interference} of the \te
 
 \headerbox{Waveguide System}{name=waveguides,column=1,span=2,below=interf} 
 {
- The diagnostic hardware was designed specifically for the waveguide system as it was built for the Czech Academy of Sciences during the ``CASTOR era'' of this Tokamak. Therefore, the new waveguide system for the GOLEM Tokamak had to have approximately the same length and also fit into the same room where the Tokamak is located.
+ %The diagnostic hardware was designed specifically for the waveguide system as it was built for the Czech Academy of Sciences during the ``CASTOR era'' of this Tokamak. 
+ The new waveguide system had to have approximately the same length as the one built for CASTOR, because all the analogue hardware had been designed specifically for it. At the same time it had to fit into the modest room where the Tokamak is located.
  %few pics 
 The total length of the new waveguide system is nearly 10 m, which was achieved by constructing a ``trombone-like'' turn as seen in fig %TODO
 }
