condensed waveguide system even more

--- a/poster/poster-svoboda/poster.tex
+++ b/poster/poster-svoboda/poster.tex
@@ -272,7 +272,7 @@ $\Delta \varphi$ is extracted from the \textcolor{cyan}{interference} of the \te
  %The diagnostic hardware was designed specifically for the waveguide system as it was built for the Czech Academy of Sciences during the ``CASTOR era'' of this Tokamak. 
  The new waveguide system had to have approximately the same length as the one built for CASTOR, because all the analogue hardware had been designed specifically for it. At the same time it had to fit into the modest room where the Tokamak is located.
  %few pics 
-The total length of the new waveguide system is nearly 10 m, which was achieved by constructing a ``trombone-like'' turn as seen in fig %TODO
+The total length close to 10 m, which was achieved by constructing a ``trombone-like'' turn as seen in fig %TODO
 }
 
  \headerbox{Data Analysis}{name=data,column=0,span=2,below=modulation}
