this word is better

--- a/poster/poster-svoboda/poster.tex
+++ b/poster/poster-svoboda/poster.tex
@@ -274,7 +274,7 @@ $\Delta \varphi$ is extracted from the \textcolor{cyan}{interference} of the \te
  The new waveguide system had to have approximately the same length as the one built for CASTOR, because all the analogue hardware had been designed specifically for it. At the same time it had to fit into the modest room where the Tokamak is located.
  %few pics 
 
-The total length is close to 10 m, which was achieved by constructing a ``trombone-like'' turn as seen in the Figure. \\
+The total length is close to 10 m, which was achieved by constructing a ``trombone-like'' bend as seen in the Figure. \\
  \includegraphics[width=.48\textwidth]{images/vlnovody.jpg}
 \end{multicols}
 }
